...
  case textBoxBlackout = "TextBox Blackout"
  case minCalories = "Minimum Calories"
  case maxCalories = "Maximum Calories"
  case minTime = "Minimum Time"
  case maxTime = "Maximum Time"
  case unwantedFoods = "Unwanted Foods"
  case shoppingDateRange = "Shopping List Date Range"
  case noShopping = "No Shopping"
  case fullInstructionsLabel = "See Full Instructions"
  case logout = "Logout Button"
  case usernameTextField = "username Text Field"
  case passwordTextField = "password text field"
  case login = "Login Button"
  case errorLogingIn = "Error loging in label"
...
