...
    return cell
  }
  override func viewDidLoad() {
    super.viewDidLoad()
    gradientLayer = GradientLayer(view: self.view)
    gradientLayer?.addGradientToView()
    self.title = "Shopping List"
    shoppingList = [ShoppingItem(false, "Lettuce"),
                    ShoppingItem(true, "Tomatos"),
                    ShoppingItem(false, "Beef"),
                    ShoppingItem(false, "Beans"),
                    ShoppingItem(false, "Milk"),
                    ShoppingItem(false, "Cheese")]
...
